# feodorov-translation-lab1

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  parser.y  programm.c  runner.c
src/include/: programm.h
src/parser/: lexer.l  parser.y
tests/: CMakeLists.txt
